# in-mem-db

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  TODO.md  main.c
core/hash_table/: hash-table.c  hash-table.h
globals/: enums.h
net/: tcp.c  tcp.h
net/tcp/: server.c  server.h  tcp.c  tcp.h
parser/: ast.c  ast.h  eval.c  eval.h  lexer.c  lexer.h  parser.c  parser.h
utils/: file.c  file.h  log.h
